--- a/sass/_public.scss
+++ b/sass/_public.scss
@@ -3,6 +3,8 @@
 // --------------------------------------------------------------------------
 
 @function add($expr1, $expr2){
+  @if __has-bool($expr1, $expr2) { @return error('bool is invalid operand'); }
+  @if has-list($expr1, $expr2) { @return error('list is invalid operand'); }
   @if __is-number($expr2) and $expr2 < 0 { @return subtract($expr1, $expr2/-1); }
   @if __is-zero($expr1, $expr2) { @return 0%; }
   @if not $expr1 or __is-zero($expr1) { @return $expr2; }
@@ -12,15 +14,18 @@
 }
 
 @function subtract($expr1, $expr2){
+  @if __has-bool($expr1, $expr2) { @return error('bool is invalid operand'); }
+  @if has-list($expr1, $expr2) { @return error('list is invalid operand'); }
   @if __is-number($expr2) and $expr2 < 0 { @return add($expr1, $expr2/-1); }
   @if __is-zero($expr1, $expr2) { @return 0%; }
-  @if not $expr1 or __is-zero($expr1) { @return $expr2; }
   @if not $expr2 or __is-zero($expr2) { @return $expr1; }
   @if __can-sum($expr1, $expr2) { @return $expr1 - $expr2; }
   @return unquote('calc(#{__format($expr1)} - #{__format($expr2)})');
 }
 
 @function multiply($expr, $n){
+  @if __has-bool($expr, $n) { @return error('bool is invalid operand'); }
+  @if has-list($expr, $n) { @return error('list is invalid operand'); }
   @if __is-zero($expr) or __is-zero($n) { @return 0%; }
   @if not $n or type-of($n) != 'number' { @return error("invalid factor"); }
   @if __can-multiply($expr, $n) { @return $expr * $n; }
@@ -28,6 +33,8 @@
 }
 
 @function divide($expr, $n){
+  @if __has-bool($expr, $n) { @return error('bool is invalid operand'); }
+  @if has-list($expr, $n) { @return error('list is invalid operand'); }
   @if __is-zero($expr) { @return 0%; }
   @if not $n or type-of($n) != 'number' or __is-zero($n) { @return error("invalid divisor"); }
   @if __can-divide($expr, $n) { @return $expr / $n; }
